# Chinese-chess-nework-programming

./: .dockerignore  .env.example  .gitignore  .project  CMakeLists.txt  FEATURE_CHECK_REPORT.md  FEATURE_STATUS.md  HUYEN_TASK_EVALUATION.md  README.DOCKER.md  README.md  ai_test_output.txt  ai_test_output2.txt  ai_test_run.txt  compile_commands.json  docker-compose.dev.yml  docker-compose.yml  test_output.txt
.cursor/rules/: agent.mdc
.vscode.backup/: launch.json
AI/: __init__.py  ai.py  ai_engine.py  ai_persistent_wrapper.py  ai_simple.py  example_input.py  example_output.py  game_state.py  pikafish
ChineseChess_AI/: hard_eval.py
SequenceDiagram/: FSM.puml  challengePlayer.puml  customizeBroad.puml  establishTCPConnection.puml  matchMaking.puml  playGame.puml  playGame1.puml  playGameNormalWithAI.puml  requestLobbyData.puml  signin.puml  signout.puml  signup.puml  viewLeaderboard.puml  viewProfile.puml  viewReadyPlayers.puml
backend/: .dockerignore  AI_ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md
backend/.cache/clangd/index/: MessageTypes.h.164AF39494757A01.idx  ThreadPool.h.E4F03C1F90DDE008.idx  ai_engine.cpp.5229CE30192E5AF2.idx  ai_engine.h.837819C37112C399.idx  auth_controller.cpp.2D17FB13548EAC1D.idx  auth_controller.h.594203579921E38D.idx  auth_repository.cpp.BB50CC53C350D318.idx  auth_repository.h.5A237B35660929E6.idx  auth_service.cpp.D6A472E69E9A69BB.idx  auth_service.h.F6D6ACF3FC5F0DAB.idx  challenge_controller.cpp.B248F05723F20F7F.idx  challenge_controller.h.7376C81D779B73C3.idx  challenge_repository.cpp.F62D9E9449AF28D1.idx  challenge_repository.h.60B3B964464690C0.idx  challenge_service.cpp.6707B4DAD73C17C9.idx  challenge_service.h.5D0BB7D2BF7A5D9B.idx  friend_controller.cpp.2A8581B72CA1B861.idx  friend_controller.h.C8EF27C875C3A475.idx  friend_repository.cpp.A51CB7FEAC0D3653.idx  friend_repository.h.C62A4071109CCB40.idx  friend_service.cpp.DA8CB8DFEB2C5167.idx  friend_service.h.F5BAAC4499A9BAFF.idx  game_controller.cpp.21D2F386A9FCEFB4.idx  game_controller.h.D76AB9AD4BE34252.idx  game_repository.cpp.3AD7B741921FB722.idx  game_repository.h.B0096B5F6381E292.idx  game_service.cpp.06A6ED8C097F64CA.idx  game_service.h.3280B8F2A1FE6FD1.idx  handle_socket.cpp.899327974716F2A0.idx  handle_socket.h.EDFEC71965382EFF.idx  json.hpp.596278C2AA6CAFF1.idx  mongodb_client.cpp.BEB83B4C671AE2FB.idx  mongodb_client.h.1491C3085AF1103F.idx  player_stat_controller.cpp.CF93F0550A88EA6C.idx  player_stat_repository.cpp.568276C14C76D064.idx  player_stat_repository.h.FD5F8FED79361094.idx  player_stat_service.cpp.1F8300B1F9B220D3.idx  player_stat_service.h.43AA5C3AF18A6C36.idx  server.cpp.660D0EB0EAADABC4.idx  server.h.AC8CAD5865E22C2D.idx
backend/docs/: GLICKO2_IMPLEMENTATION.md
backend/docs/SequenceDiagram/: FSM.puml  FSM_summary.puml  challengePlayer.puml  customizeBroad.puml  playGameNormalWithAI.puml  requestLobbyData.puml  signin.puml  viewProfile.puml
backend/examples/: client_example.cpp
backend/include/ai/: ai_controller.h  ai_service.h
backend/include/auth/: auth_controller.h  auth_repository.h  auth_service.h
backend/include/challenge/: challenge_controller.h  challenge_repository.h  challenge_service.h
backend/include/database/: mongodb_client.h  redis_client.h
backend/include/friend/: friend_controller.h  friend_handler.h  friend_repository.h  friend_service.h
backend/include/game/: game_controller.h  game_repository.h  game_service.h
backend/include/player_stat/: player_stat_controller.h  player_stat_handler.h  player_stat_repository.h  player_stat_service.h
backend/include/protocol/: MessageTypes.h  ThreadPool.h  ai_engine.h  handle_socket.h  message_types.h  protocol_adapter.h  python_ai_wrapper.h  server.h  thread_pool.h
backend/protocol/: ai_engine.cpp  handle_socket.cpp  server.cpp
backend/python_ai/: README.md  ai_service.py  board_validator.py  requirements.txt
backend/scripts/: build.sh  run_tests.sh
backend/src/ai/: ai_controller.cpp  ai_rawio.cpp  ai_service.cpp
backend/src/auth/: auth_controller.cpp  auth_handler.cpp  auth_rawio.cpp  auth_repository.cpp  auth_service.cpp
backend/src/challenge/: challenge_controller.cpp  challenge_handler.cpp  challenge_repository.cpp  challenge_service.cpp
backend/src/database/: mongodb_client.cpp  redis_client.cpp
backend/src/friend/: friend_controller.cpp  friend_handler.cpp  friend_rawio.cpp  friend_repository.cpp  friend_service.cpp
backend/src/game/: game_controller.cpp  game_handler.cpp  game_rawio.cpp  game_repository.cpp  game_service.cpp
backend/src/player_stat/: player_stat_controller.cpp  player_stat_handler.cpp  player_stat_rawio.cpp  player_stat_repository.cpp  player_stat_service.cpp
backend/src/protocol/: ai_engine.cpp  handle_socket.cpp  python_ai_wrapper.cpp  server.cpp  thread_pool.cpp
backend/tests/: CMakeLists.txt
backend_spec/: README.md
backend_spec/legality/: MOVE_PACKET.md  README.md
backend_spec/result/: ELO.md  GAME_END_PACKET.md  README.md
backend_spec/signup/: README.md  SIGNUP_PACKET.md  schema.sql
docs/SequenceDiagram/: challengePlayer.puml  challengePlayer_description.tex  establishTCPConnection.puml  establishTCPConnection_description.tex  matchMaking.puml  matchMaking_description.tex  playGame1.puml  playGame1_description.tex  signin.puml  signin_description.tex  signout.puml  signup.puml  viewLeaderboard.puml  viewLeaderboard_description.tex  viewReadyPlayers.puml
frontend/: .dockerignore  Dockerfile  README.md  dependency-reduced-pom.xml  mvnw  pom.xml  run.sh
frontend/src/: module-info.java  server.c
include/auth/: auth_handler.h
include/challenge/: challenge_handler.h
include/config/: avatar_config.h  config_loader.h
include/database/: mongodb_client.h  (+1 more)
server/: README.md
tests/: CMakeLists.txt
tests/auth/: test_auth_handler.cpp
tests/challenge/: test_challenge_handler.cpp
tests/database/: test_connections.cpp  test_import_sample_data.cpp  test_mongo_simple.cpp  test_redis_simple.cpp
tests/game/: test_game_handler.cpp
tests/network/: test_protocol.cpp
tests/player_stat/: test_player_stat_handler.cpp
(+113 files in other folders)
