cmake_minimum_required(VERSION 3.15)

# Find testing framework (GoogleTest example)
# Uncomment and configure if you want to use GoogleTest
# find_package(GTest REQUIRED)
# include(GoogleTest)

# Test source files
# set(TEST_SOURCES
#     test_server.cpp
#     test_message_types.cpp
# )

# For each test
# add_executable(test_name ${TEST_SOURCES})
# target_link_libraries(test_name PRIVATE
#     ${PROJECT_NAME}
#     GTest::gtest
#     GTest::gtest_main
# )
# gtest_discover_tests(test_name)

# Placeholder: Add your tests here
message(STATUS "Tests directory configured. Add test files to enable testing.")

